3.3    21 January 2025
* SCIENCE CHANGE: Default Excess Heat Factor (EHF) calculation changed from "PA13" to "NF13" (i.e. daily EHF values are now calculated
  according to the original Nairn and Fawcett (2013) definition).
* Daily EHF and ECF values are written to file (GUI only right now, not written out to netcdf).
* Following the update of climdex.pcic to v1.2 the dates of events are now calculated for the following indices: 
    tnn, tnx, txn, txx, rxdday, rx1day, rx5day
* QC checks are now repeatable if QC thresholds need to be changed.

3.2     21 June 2024
* Added adjustable QC parameters.

3.1.9   11 May 2024
* Removed LMoFit as a dependency (lmomco had required functionality).

3.1.8   16 March 2024
* Fixed Climpact crashing at the heatwave calculations, caused by an ostensibly breaking change to base R (somewhere around R 4.3).

3.1.7   29 December 2023
* Fixed problem where QC histograms were failing to plot for stations with maximum daily rainfall < 40 mm.

3.1.6   16 September 2023
* Better error handling for QC box plots, to handle time-series that don't have any data for certain calendar months.
* Non percentile indices are still calculated when insufficient base period data exist.
* Code cleaning, make package loading work with updated dependencies.
* Change default txtn value to '2' in sample batch script.
* Install latest climdex.pcic from github instead of CRAN.

3.1.5   9 August 2023
* Updated a reference to parameter distributions that was breaking the SPEI calculation (likely due to changes in the lmomco package).
* Updated pacakge loading for SPEI dependencies.

3.1.4   20 July 2023
* Install climdex.pcic from a local file during installation.

3.1.3   16 July 2022
* Prevent crashing due to problematic MK tests.

3.1.2   2 April 2022
* Added linear trend line to plots.
* Added the Mann-Kendall p-value to plots.

3.1.1   9 October 2021