@@ -1,9 +1,10 @@
 3.3    21 January 2025
 * SCIENCE CHANGE: Default Excess Heat Factor (EHF) calculation changed from "PA13" to "NF13" (i.e. daily EHF values are now calculated
   according to the original Nairn and Fawcett (2013) definition).
-* Daily EHF and ECF values are written to file (GUI only right now, not written out to netcdf).
+* Daily EHF and ECF values are written to file (station files only, not for netcdf data).
 * Following the update of climdex.pcic to v1.2 the dates of events are now calculated for the following indices: 
-    tnn, tnx, txn, txx, rxdday, rx1day, rx5day
+    tnn, tnx, txn, txx, rxdday, rx1day, rx5day, cdd (station files only), cwd (station files only), gsl (station files only)
+* Users uploading the same file on a remote instance will no longer overwrite each others data.
 * QC checks are now repeatable if QC thresholds need to be changed.
 
 3.2     21 June 2024
